clang/test/BSC/Negative/Method/BuiltInType/int_instance_function_no_member2/int_instance_function_no_member2.cbs
// RUN: %clang_cc1 -verify %s

int int::getA() {
    return 1;
}

int main() {
    int x = 1;
    x.increase(); // expected-error {{no member named 'increase' in type 'int'}}
    return 0;
}